# data-structures-lab-3

./: .gitignore  ClearText.txt  README.md  codes_ClearText.txt  codes_frankenstein.txt  encoded_ClearText.txt  encoded_frankenstein.txt  franken_out.txt  frequency_table_ClearText.txt  frequency_table_frankenstein.txt  out_ClearText.txt
src/: CMakeLists.txt  main.cpp
src/encoding/: CMakeLists.txt  decoder.cpp  decoder.h  encoder.cpp  encoder.h
src/encoding/utils/: CMakeLists.txt  code_table.cpp  code_table.h  freq_table.cpp  freq_table.h  huff_tree.cpp  huff_tree.h  huffman.cpp  huffman.h  tree_map.cpp  tree_map.h
src/huffman/: CMakeLists.txt  freq_table.cpp  freq_table.h  huffman.h
src/tree_map/: CMakeLists.txt  tree_map.cpp  tree_map.h
